# Chapter8

./: Dockerfile  Dockerfile.Ubuntu18.04  Dockerfile.Ubuntu20.04  Dockerfile.debian  License.txt  Makefile  README.autovirtualbox  README.docker  README.md  README.virtualbox  Setup.Ubuntu18.04  Setup.Ubuntu20.04  autovirtualbox.sh  batch.sh  build.sh  docker_build.sh  docker_run.sh  dockerit.sh  dockertest.sh  get_stats.sh  results.txt  stats.out
CartExchange/: CMakeLists.txt  CartExchange.cc
CartExchange_Pack/: CMakeLists.txt  CartExchange.cc
CartExchange_VectorType/: CartExchange.cc
DebugPrintout/: CMakeLists.txt  DebugPrintout.c  Makefile.simple  timer.c  timer.h
FileRead/: CMakeLists.txt  FileRead.c  Makefile.simple  file.in
GhostExchange/: GhostExchange.cc  batch.sh  build.sh  clean.sh  get_stats.sh  plottimeby3Dtype.py  plottimebytype.py  results.txt  stats.out
GhostExchange/CartExchange3D_ArrayAssign/: CartExchange.cc  malloc3D.h
GhostExchange/CartExchange3D_Neighbor/: CMakeLists.txt  CartExchange.cc
GhostExchange/CartExchange3D_VectorTypes/: CMakeLists.txt  CartExchange.cc
GhostExchange/CartExchange_Neighbor/: CMakeLists.txt  CartExchange.cc
GhostExchange/CartExchange_Neighboralltoallw/: CartExchange.cc
GhostExchange/CartExchange_Pack/: CMakeLists.txt  CartExchange.cc
GhostExchange/CartExchange_VectorTypes/: CMakeLists.txt  CartExchange.cc  malloc2D.c  malloc2D.h
GhostExchange/GhostExchange3D/: CMakeLists.txt  GhostExchange.cc
GhostExchange/GhostExchange3D_ArrayAssign/: CMakeLists.txt  GhostExchange.cc  malloc3D.h
GhostExchange/GhostExchange3D_VectorTypes/: CMakeLists.txt  GhostExchange.cc
GhostExchange/GhostExchange_ArrayAssign/: CMakeLists.txt  GhostExchange.cc
GhostExchange/GhostExchange_Pack/: CMakeLists.txt  GhostExchange.cc
GhostExchange/GhostExchange_VectorTypes/: CMakeLists.txt  GhostExchange.cc  malloc2D.h  timer.h
GhostExchange_ArrayAssign/: GhostExchange.cc
GhostExchange_Pack/: CMakeLists.txt  GhostExchange.cc  timer.h
GhostExchange_VectorTypes/: GhostExchange.cc
GlobalSums/: CMakeLists.txt  Makefile.simple  globalsums.c
HybridMPIPlusOpenMP/: CMakeLists.txt  CartExchange.cc  run.sh
HybridMPIPlusOpenMP/cmake/Modules/: FindVector.cmake
MinWorkExample/: CMakeLists.txt  Makefile.simple  MinWorkExampleMPI.c
ScatterGather/: CMakeLists.txt  Makefile.simple  ScatterGather.c
Send_Recv/: CMakeLists.txt  Makefile.simple  SendRecv1.c  SendRecv2.c  SendRecv3.c  SendRecv4.c  SendRecv5.c  SendRecv6.c
StreamTriad/: CMakeLists.txt  Makefile.simple  StreamTriad.c  StreamTriadVec.c  stream_triad.c  timer.c
StreamTriad/cmake/Modules/: FindVector.cmake
SynchronizedTimer/: CMakeLists.txt  Makefile.simple  SynchronizedTimer1.c  SynchronizedTimer2.c
